answers to commenary by various

--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -101,7 +101,7 @@ Email: dleaf@healthpolicy.usc.edu                     & Email: prados@usc.edu \\
 
 \noindent A large body of evidence documents that high-quality early childhood programs boost the skills of disadvantaged children.\footnote{See \citet{Cunha_Heckman_ea_2006_HEE}, \citet{Almond-Currie_2011_JEP}, \citet{Duncan_Magnuson_2013_JEP}, and \citet{Elango_Hojman_etal_2016_Early-Edu} for surveys.} Much of this research reports treatment effects of programs on cognitive test scores, school readiness, and measures of early-life social behavior. A few studies analyze longer-term benefits in terms of completed education, adult health, crime and labor income.\footnote{Examples include: \citet{Heckman_Moon_etal_2010_QE}, \citet{Havnes_Mogstad_2011_AEJEP}, and \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} Rigorous evidence on their long-term social efficiency is scarce.\footnote{\citet{Belfield_Nores_etal_2006_JHR} and \citet{Heckman_Moon_etal_2010_RateofReturn} present a life cycle cost-benefit analysis of the Perry Preschool Program. Our approach is more comprehensive in terms of the outcomes analyzed and in providing a general methodology that can be replicated to assess the social efficiency of other programs.}
 
-This paper investigates the social benefits and costs of an influential pair of essentially identical early childhood programs conducted in North Carolina that targeted disadvantaged children. The Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE)---henceforth ABC/CARE---were evaluated by randomized control trials. Both programs were launched in the 1970s. Participants were followed through their mid 30s. The programs started early in life (at 8 weeks of life) and engaged participants until age 5. They generated numerous positive treatment effects.\footnote{A companion paper, \citet{Garcia_Heckman_Ziff_2018_EER}, reports these treatment effects.} Parents of participants (primarily mothers) received free childcare that facilitated parental employment and adult education. The program has a $13.7\%$ (s.e.\ $3\%$) per-annum tax-adjusted internal rate of return and a $7.3$ (s.e.\ $1.84$) tax-adjusted benefit/cost ratio.
+This paper investigates the social benefits and costs of an influential pair of essentially identical early childhood programs conducted in North Carolina that targeted disadvantaged children. The Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE)---henceforth ABC/CARE---were evaluated by randomized control trials. Both programs were launched in the 1970s. Participants were followed through their mid 30s. The programs started early in life (at 8 weeks of life) and engaged participants until age 5. They generated numerous positive treatment effects.\footnote{A companion paper, \citet{Garcia_Heckman_Ziff_2018_EER}, reports these treatment effects. Participants in ABC/CARE benefit in terms of both cognitive and socio-emotional skills, education, employment and labor income, and risky behavior and health. The parents of participants benefit in terms of labor income and education.} Parents of participants (primarily mothers) received free childcare that facilitated parental employment and adult education. The program has a $13.7\%$ (s.e.\ $3\%$) per-annum tax-adjusted internal rate of return and a $7.3$ (s.e.\ $1.84$) tax-adjusted benefit/cost ratio.
 
 The program is a prototype for many programs planned or in place today.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: Infant Health and Development Program (IHDP) in eight different cities in the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Current Educare programs in the U.S. are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}. Appendix~\ref{app:details-educare} lists these Educare programs, all of which implement curricula based on ABC/CARE.} About 19\% of all African-American children would be eligible for ABC/CARE today.\footnote{43\% of African-American children were eligible at its inception.} Implementation of the ABC/CARE program in disadvantaged populations would be an effective, socially efficient policy for promoting social mobility.\footnote{\citet{Garcia_2016_National-Implementation-ECI} estimate that if ABC/CARE were implemented on the current stock of eligible children, the intra-black gap (black disadvantaged relative to black advantaged) in high-school graduation, years of education, employment and labor income at age 30 for females would be reduced by $110\%$, $76\%$, $22\%$, and $30\%$, respectively. It would eradicate the black--white high-school graduation gap, reduce the years of education gap to 0.12 years, reduce the employment gap to 14 percentage points, and reduce the labor income gap to 4,075 USD (2014). For males, the program would eradicate the intra-black high-school graduation gap, reduce the years of education gap to 0.18 years, and reduce the employment gap to 9 percentage points.}
 
@@ -176,7 +176,7 @@ F_{k,a}^0 \left( \cdot | \text{\textbf{ Fix }} \bm{X}_{k,a}^d = \bm{x}, \bm{B}_{
 where $F_{k,a}^j \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ is the distribution of $\bm{Z}$ for $\bm{\Omega}$ fixed at $\bm{\omega}$ and $F_a \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ is the age-$a$ distribution of the errors of the production functions, assumed to be common across treatment regimes and samples given $\bm{X}_{k,a}^d = \bm{x}$ and $\bm{B}_{k} = \bm{b}$. $\square$
 \end{assumption}
 
-We clarify Assumption~\ref{ass:summary} with three remarks.
+We clarify Assumption~\ref{ass:summary} with two remarks.
 
 \begin{remark} \textbf{There are Two Distinct Aspects of Structural Invariance}
 Assumption~\ref{ass:summary} has two distinct aspects that can be resolved further into two separate assumptions: (i) structural relationships and distributions evaluated at the same arguments have identical values for treatment and control groups in the experimental sample, and (ii) analogous conditions hold across the experimental and non-experimental samples. Condition (ii) enables analysts to simulate treatment and control outcomes in non-experimental samples.
@@ -243,7 +243,7 @@ Below we discuss how this condition can be weakened and unbiased forecasts can s
 
 To appreciate the benefit of Assumption~\ref{ass:exog}, consider the following example. Suppose that years of education is a component of $\bm{X}^{d'}_{k,{a'}}$. The joint distribution of $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}^{d'}_{k,{a'}}$ can differ substantially across experimental and non-experimental samples. In the experimental sample, years of education are boosted by treatment, which is randomly assigned. In the non-experimental samples, however, there is no experimental variation. Individuals with high observed levels of education could have high values of $\bm{\varepsilon}_{k,a}^d$ due to omitted ability. This creates a fundamentally different dependence between $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}_{k,{a'}}^{d'}$ in the non-experimental sample. Assumption~\ref{ass:exog} avoids this problem when making forecasts. Below, we establish that our forecasts based on this assumption are concordant with forecasts from approaches that do not necessarily require Assumption~\ref{ass:exog}.
 
-\textbf{Step 3. Determining Inputs.} Analysis of the non-experimental data reveals that the inputs determining labor income under Assumption~\ref{ass:exog} are: average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income. Appendix Table~\ref{table:predlaborincome} shows that these variables predict labor income. Appendix~\ref{app:containsupport} shows that there is common support across datasets. We report tests for endogeneity of these variables in the experimental and auxiliary samples used in this paper in Appendix~\ref{appendix:methodology}.\footnote{These tests assume that $\bm{\varepsilon}_{k,a}^d, k \in \{e,n\}$, follows a factor structure. Factor structure models are widely used in structural estimation of production functions of skills during early childhood. See, e.g., \citet{Cunha_Heckman_2008_JHR} and \citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}.} After conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_{k}$, we do not reject the null hypothesis of exogeneity. Accordingly, we use OLS for making our baseline estimates.
+\textbf{Step 3. Determining Inputs.} Analysis of the non-experimental data reveals that the inputs determining labor income under Assumption~\ref{ass:exog} are: average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income. Appendix Table~\ref{table:predlaborincome} shows that these variables predict labor income. Appendix~\ref{app:containsupport} shows that there is common support across datasets. We report tests for endogeneity of these variables in the experimental and auxiliary samples used in this paper in Appendix~\ref{app:endogeneity}.\footnote{These tests assume that $\bm{\varepsilon}_{k,a}^d, k \in \{e,n\}$, follows a factor structure. Factor structure models are widely used in structural estimation of production functions of skills during early childhood. See, e.g., \citet{Cunha_Heckman_2008_JHR} and \citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}.} After conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_{k}$, we do not reject the null hypothesis of exogeneity. Accordingly, we use OLS for making our baseline estimates.
 
 Table~\ref{table:summint} displays the treatment effects of the program for these inputs.\footnote{We first present raw treatment-control mean differences. As we report in Table~\ref{table:summint}, the treatment effects are substantial across multiple outcomes. In some cases, this finding is at odds with what other studies report \citep{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. The difference is explained, mainly, by the fact that we consider effects by gender.  Only \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} consider treatment effects by gender. They focus on health effects and find that men have many more positive effects especially in cardiovascular and metabolic conditions if compared to women. This is consistent with the results we report below.} Assignment to treatment has statistically and economically significant causal effects on the inputs generating final outcome treatment effects. Our forecasted treatment effects are based on these program-induced changes in inputs. For females, it increases the average PIAT score by almost one third of a standard deviation.\footnote{The test is standardized to an in-sample standard deviation of 15 units.} For males, the effect is almost half of a standard deviation. The program substantially boosts high school graduation for females and college graduation for both males and females. We use years of education attained to summarize both effects in a measure that is comparable across genders. Labor income at age 21 for girls is not greatly boosted by the program. This arises in part because treated girls are more likely to be enrolled in college at age 21 and thus do not work at that age. The program boosts annual labor income, especially for males, for whom the average treatment effect at age 30 is almost 20,000 (2014 USD).\footnote{Table~\ref{table:summint} displays age-21 and age-30 labor income because labor income is observed at ages 21 and 30 in the experimental sample. Labor income at age 30 is an input in our methodology only after age 30.}
 
@@ -292,12 +292,12 @@ Equations~\eqref{eq:suff1} and~\eqref{eq:suff2} are sufficient conditions for Eq
 \setcounter{equation}{5}
 \begin{subequations}
 \begin{equation}
-\text{Y}_{e,30}^d = \text{\texttau} \cdot D +  \bm{B}_{e,30} \cdot \bm{\gamma}_{e,30}^d +\bm{X}_{e,30}^d \cdot \bm{\beta}_{e,30}^d + \varepsilon_{e,a}^d. \label{eq:linearexp}
+\text{Y}_{e,30}^d = \text{\texttau} \cdot D +  \bm{B}_{e} \cdot \bm{\gamma}_{e,30}^d +\bm{X}_{e,30}^d \cdot \bm{\beta}_{e,30}^d + \varepsilon_{e,a}^d. \label{eq:linearexp}
 \end{equation}
 
 \noindent Failing to reject the null hypothesis $H_{0}:$ \texttau $= 0$ is equivalent to failing to reject invariance across treatment regimes.
 
-Panel (a) of Table~\ref{table:invariance} displays estimates of the coefficients of Equation~\eqref{eq:linearexp} for labor income at age 30 by gender. We do not reject the null hypothesis that the technology is invariant across treatment regimes for either gender.\footnote{Note that after accounting for background variables and the intermediate inputs, average labor income is \$2,213 (2014 USD) higher in the treatment group for females. This value is relatively small in the context of annual labor income at age 30 and given that the average in the control group is \$23,443 (2014 USD). The same holds for the males, where the treatment-control difference is \$232 net of inputs and the average for the control group is  \$29,340 (2014 USD).} Panel (b) of Table~\ref{table:invariance} reports estimates for the remaining coefficients in Equation~\eqref{eq:linearexp}. Years of education is strongly boosted by ABC/CARE (see Table~\ref{table:summint}).
+Panel (a) of Table~\ref{table:invariance} displays estimates of the coefficients of Equation~\eqref{eq:linearexp} for labor income at age 30 by gender. We do not reject the null hypothesis that the technology is invariant across treatment regimes for either gender.\footnote{Note that after accounting for background variables and the intermediate inputs, average labor income is \$2,213 (2014 USD) higher in the control group for females. This value is relatively small in the context of annual labor income at age 30 and given that the average in the control group is \$23,443 (2014 USD). The same holds for the males, where the treatment-control difference is \$232 net of inputs and the average for the control group is  \$29,340 (2014 USD).} Panel (b) of Table~\ref{table:invariance} reports estimates for the remaining coefficients in Equation~\eqref{eq:linearexp}. Years of education is strongly boosted by ABC/CARE (see Table~\ref{table:summint}).
 
 \begin{table}[!htpb]
 \begin{threeparttable}
@@ -313,7 +313,7 @@ Panel (a) of Table~\ref{table:invariance} displays estimates of the coefficients
 
   \multicolumn{5}{l}{\textbf{Panel (b). Precision of Estimated Coefficients of \eqref{eq:linearexp} }} \\
 
-\multicolumn{5}{l}{$\bm{B}_{e,30}$ (age-30 baseline variables)} \\
+\multicolumn{5}{l}{$\bm{B}_{e}$ (baseline variables)} \\
 Mother's Education (at birth) & 	 -957.0972  & 0.387	 & 	1,850.201 & 0.358	 \\ \\
 
 \multicolumn{5}{l}{$\bm{X}_{e,30}^d$ (age-30 inputs)} \\
@@ -329,7 +329,7 @@ $K$  (treatment indicator) & -142.631 & 0.965 & 1,887.575 & 0.654 \\ \\
  \multicolumn{5}{l}{\textbf{Panel (d). Precision of Estimated Coefficients of Counterpart to \eqref{eq:linearnoexp}}} \\
   \multicolumn{5}{l}{\qquad \qquad \qquad \textbf{in the Non-experimental Sample}} \\ \\
 
-\multicolumn{5}{l}{$\bm{B}_{k,30}$ (age-30 baseline variables)} \\
+\multicolumn{5}{l}{$\bm{B}_{k}$ (baseline variables)} \\
 Mother's Education (at birth) & -229.481 & 0.631 & 427.224 & 0.459 \\ \\
 \multicolumn{5}{l}{$\bm{X}_{k,30}^d$ (age-30 inputs)} \\
 PIAT (5-7) & 266.1971 & 0.002 & 219.220 & 0.044 \\
@@ -343,16 +343,16 @@ Observations & \multicolumn{2}{c}{829} & \multicolumn{2}{c}{746}  \\
 \end{tabularx}
 \begin{tablenotes}
 \footnotesize
-\item Note for Panel (a) and (b): Estimates of the coefficients in Equation~\eqref{eq:linearexp} for labor income at age 30 by gender within the experimental sample. $R$ denotes the treatment indicator ($R = 0$ for control-group individuals and $R = 1$ for treatment-group individuals). $\bm{B}_{e,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{e,30}^d$ is age-30 intermediate inputs. We drop labor income observations above the 95\textsuperscript{th} percentile to avoid precision issues.\\
-\item Note for Panel (c) and (d): Estimates of the coefficients in Equation~\eqref{eq:linearnoexp} for labor income at age 30 by gender pooling the experimental treatment and control groups and the synthetic cohort at age 30. $K$ denotes membership to the experimental or non-experimental sample ($K = 0$ synthetic cohort in the non-experimental sample and $K = 1$ experimental sample). $\bm{B}_{k,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{k,30}^d$ is age-30 intermediate inputs.
+\item Note for Panel (a) and (b): Estimates of the coefficients in Equation~\eqref{eq:linearexp} for labor income at age 30 by gender within the experimental sample. $D$ denotes the treatment indicator ($D = 0$ for control-group participants and $D = 1$ for treatment-group participants). $\bm{B}_{e}$ is comprised of baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{e,30}^d$ is age-30 intermediate inputs. We drop labor income observations above the 95\textsuperscript{th} percentile to avoid precision issues.\\
+\item Note for Panel (c) and (d): Estimates of the coefficients in Equation~\eqref{eq:linearnoexp} for labor income at age 30 by gender pooling the experimental treatment and control groups and the synthetic cohort at age 30. $K$ denotes membership to the experimental or non-experimental sample ($K = 0$ synthetic cohort in the non-experimental sample and $K = 1$ experimental sample). $\bm{B}_{k}$ is comprised of baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{k,30}^d$ is age-30 intermediate inputs.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
 
-Define $K = \bm{\mathit{1}}\left( k = e\right)$ as an indicator of whether an observation comes from the experimental sample. The coefficient on $K$, denoted by $\pi$, should be zero in the following linear technology (i.e.,\ $H_0: \pi = 0$ if Condition~\eqref{eq:suff1} is true)
+Define $K = \bm{\mathit{1}}\left( k = e\right)$ as an indicator of whether an observation comes from the experimental sample. The coefficient on $K$, denoted by $\pi$, should be zero in the following linear technology (i.e.,\ $H_0: \pi = 0$ if Condition~\eqref{eq:suff2} is true)
 \begin{equation}
-\text{Y}_{k,30} = \pi \cdot K +  \bm{B}_{k,30} \cdot \bm{\gamma}_{k,30} +\bm{X}_{k,30} \cdot \bm{\beta}_{k,30} + \varepsilon_{k,a}. \label{eq:linearnoexp}
+\text{Y}_{k,30} = \pi \cdot K +  \bm{B}_{k} \cdot \bm{\gamma}_{k,30} +\bm{X}_{k,30} \cdot \bm{\beta}_{k,30} + \varepsilon_{k,a}. \label{eq:linearnoexp}
 \end{equation}
 \end{subequations}
 
@@ -394,7 +394,7 @@ Note for Panel (b): Tests for equality in distributions of residuals across the 
 
 With the empirical counterparts of $\bm{\varepsilon}_{k,a}^d$ in hand, we implement two tests to compare the distributions in Table~\ref{table:invarianceerrors}: $t$-tests of mean comparisons and Kolgomorov-Smirnov tests of equality of distributions. We do not reject equality of treatment and control distributions of $\bm{\varepsilon}_{k,a}^d$ for both females and males---Panel (a). As before, we pool the experimental treatment and control groups and the synthetic cohort to test invariance across samples by gender. Except for one hypothesis test of Condition~\eqref{eq:suff2} for males, we do not reject the null hypothesis of invariance across samples---see Panel (b).
 
-\textbf{Steps 5. Accounting for Estimation Error, Forecast Error, and Plausible Ranges of Externally Supplied Parameters.} We obtain standard errors from the empirical bootstrap distribution. Our inference accounts for each step of our estimation procedure, as well as forecast error. We conduct sensitivity analyses for externally supplied parameters. A step-by-step recipe for accounting for parameter uncertainty is presented in Appendix~\ref{appendix:bootstrap}. The forecasted present value of the gain induced by treatment using the estimates displayed in Figure~\ref{fig:labor-income-profiles} is \$636,674 (s.e.\ \$183,224) in 2014 USD. We explore the estimates from alternative forecasting models in Appendix~\ref{appendix:predsensitivity}.\footnote{As both a referee and various discussants of our paper have pointed out, our identification and estimation strategies do not impose cross-sectional restrictions. We use different datasets to identify and estimate the  $\bm{\phi}_{a} \left( \bm{x}, \bm{b} \right)$ for each outcome (e.g., labor income, health, crime). Thus, the predictor variables that we are able to use differ across outcomes and we cannot conduct joint estimations.} When pooling males and females and when separating the samples by gender, the present value gains remain within a range that does not change our inference that the program had substantial lifetime benefits.
+\textbf{Steps 5. Accounting for Estimation Error, Forecast Error, and Plausible Ranges of Externally Supplied Parameters.} We obtain standard errors from the empirical bootstrap distribution. Our inference accounts for each step of our estimation procedure, as well as forecast error. We conduct sensitivity analyses for externally supplied parameters. A step-by-step recipe for accounting for parameter uncertainty is presented in Appendix~\ref{appendix:bootstrap}. The forecasted present value of the gain induced by treatment using the estimates displayed in Figure~\ref{fig:labor-income-profiles} is \$133,032 (s.e.\ \$76,634) in 2014 USD. We explore the estimates from alternative forecasting models in Appendix~\ref{appendix:predsensitivity}.\footnote{As both a referee and various discussants of our paper have pointed out, our identification and estimation strategies do not impose cross-sectional restrictions. We use different datasets to identify and estimate the  $\bm{\phi}_{a} \left( \bm{x}, \bm{b} \right)$ for each outcome (e.g., labor income, health, crime). Thus, the predictor variables that we are able to use differ across outcomes and we cannot conduct joint estimations.} When pooling males and females and when separating the samples by gender, the present value gains remain within a range that does not change our inference that the program had substantial lifetime benefits.
 
 \textbf{Step 6. Validating Forecasts.} Invariance across treatment regimes and samples is the essential ingredient for constructing valid forecasts. Figure~\ref{fig:labor-income-profiles} displays our forecasted labor income profiles. Forecasted and actual labor income are closely aligned in both the treatment and the control regimes.\footnote{The content in Figure~\ref{fig:labor-income-profiles} is sufficient but not necessary to calculate the gain of the program due to labor income. It would be sufficient to forecast the difference between the treatment and control groups. Forecasting the levels, however, provides us with additional testable implications. It also allows us to easily account for forecasting error and to verify that the life-cycle profiles that we estimate are comparable to observed profiles for similar socio-economic groups. The pattern of life-cycle labor income we generate is typical for that of low-skilled workers \citep{Blundell-etal_2015_J-Pub-E,Gladden_Taber_2000_WageProgression,Sanders-Taber_2012_AR,Lagakos_Moll_etal_2016_LifeCycle_NBER}.} Computing the net present value, the internal rate of return and benefit/cost ratios is straightforward once age-by-age forecasts are available.\footnote{Some practical details involved in doing this are in Appendices~\ref{app:method_irr} and \ref{app:method_cbratio}.}
 
@@ -447,7 +447,7 @@ We also calculate medical expenditures before age 30.\footnote{See Appendix~\ref
 
 \subsection{Crime}
 
-\noindent To estimate the life-cycle benefits and costs of ABC/CARE on crime, we use rich data obtained from public records. Two previous studies consider the impacts of ABC on crime: \citet{Clarke_Campbell_1998_ABC_Comparison_ECRQ} use administrative crime records up to age 21, and find no statistically significant treatment effects. \cite{Barnett_Masse_2002_benefitcost,Barnett_Masse_2007_EER} analyze self-reported crime at age 21. They lacked access to the longer-term, administrative data that we use and report weak treatment effects on crime. Our study improves on this research in two ways: (i) we use administrative data on the accumulated number of crimes that participants commit through their mid 30s; (ii) we use micro-data specific to the states in which participants grew up, as well as other national datasets, to forecast criminal activity from the mid 30s to 50. We forecast using methods standard in the criminology literature.\footnote{\citet{Cohen-Bowles_2010_Estimating-Cost-Crime} and \citet{McCollister_etal_2010_DAD}.} See Appendix~\ref{appendix:crime} for a a complete discussion of our crime forecasts.
+\noindent To estimate the life-cycle benefits and costs of ABC/CARE on crime, we use rich data obtained from public records. Two previous studies consider the impacts of ABC on crime: \citet{Clarke_Campbell_1998_ABC_Comparison_ECRQ} use administrative crime records up to age 21, and find no statistically significant treatment effects. \cite{Barnett_Masse_2002_benefitcost,Barnett_Masse_2007_EER} analyze self-reported crime at age 21. They lacked access to the longer-term, administrative data that we use and report weak treatment effects on crime. Our study improves on this research in two ways: (i) we use administrative data on the accumulated number of crimes that participants commit through their mid 30s; (ii) we use micro-data specific to the states in which participants grew up, as well as other national datasets, to forecast criminal activity from the mid 30s to 50. We forecast using methods standard in the criminology literature.\footnote{\citet{Cohen-Bowles_2010_Estimating-Cost-Crime} and \citet{McCollister_etal_2010_DAD}.} See Appendix~\ref{appendix:crime} for a complete discussion of our crime forecasts.
 
 \subsection{Parental Labor Income} \label{section:pincome}
 
